# deno-sandbox-poc

./: CLAUDE.md  Cargo.toml  README.md  SECURITY_REVIEW.md
docs/adr/: 001-language-choice.md  002-monorepo-and-build.md
scripts/: example.js
src/: error.rs  lib.rs  limits.rs  main.rs  metrics.rs  module_loader.rs  runtime.rs  runtime_bootstrap.js
src/ops/: console.rs  db.rs  mod.rs  result.rs
tests/: integration.rs
