[package]
name = "deno-sandbox-poc"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core = "0.336"
tokio = { version = "1", features = ["rt", "time", "macros"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
deno_error = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[[test]]
name = "integration"
path = "tests/integration.rs"
